# resampler

./: .gitignore  LICENSE  README.md  apt.txt  example_usage.ipynb  example_usage.py  pyproject.toml  requirements.txt  requirements_lib.txt  resampler_notebook.py  resampler_notebook.spell  setup.cfg  setup.py  test_resampler.py  test_resampler_notebook.ipynb  test_resampler_notebook.py
.github/workflows/: docs.yml  main.yml
binder/: requirements.txt
html/: index.html  resampler.html  search.js
pdoc/: make.py  module.html.jinja2  spell.txt
pdoc_files/: make.py  module.html.jinja2  spell.txt
resampler/: __init__.py  __init__.pyi  requirements.txt
